# III-Drone-ROS2-pkg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
launch/: iii_drone_HW.launch.py  iii_drone_real.launch.py  iii_drone_simulation.launch.py  pl_mapper_HW.launch.py  pl_mapper_SW.launch.py  pl_tracker.launch.py  pl_tracker_CPP_HW_QAV.launch.py  pl_tracker_QAV.launch.py  pl_tracker_SIM.launch.py  pl_tracker_SW_Hough_QAV.launch.py  sensors_real.launch.py  sensors_sim.launch.py  simulate_pointcloud_control_launch.py  tf_real.launch.py  tf_sim.launch.py
matlab/: test_orientations.m
rviz/: HW_visualization.rviz  simulation_rviz.rviz
scripts/: draw_PL_IDs (copy).py  image_decompress.py  image_drawer.py  image_drawer_HW_compressed.py  image_drawer_latency.py  image_drawer_ros2bag.py  orientation_test.py  print_PL_IDs.py
src/: HW_hough_timing.cpp  SW_hough_timing.cpp  depth_cam_to_mmwave.cpp  drone_frame_broadcaster_node.cpp  geometry.cpp  geometry.h  hough_interfacer_node.cpp  hough_interfacer_node.h  hough_pub.cpp  img_3d_to_2d_proj.cpp  img_decompress.cpp  lidar_to_mmwave.cpp  logger_node.cpp  offboard_control.cpp  offboard_control_ID.cpp  offboard_control_ID_KF_yaw.cpp  offboard_control_ID_midflight.cpp  offboard_control_fly_to_line.cpp  offboard_control_magnetometers.cpp  pl_dir_computer_node.cpp  pl_dir_computer_node.h  pl_mapper_node.cpp  pl_mapper_node.h  points_on_image.py  powerline_class.cpp  powerline_class.h  single_line_class.cpp  single_line_class.h  vel_ctrl_vec_pub.cpp
